fix: styles fixes on mobile devices

--- a/styles/item-page.module.css
+++ b/styles/item-page.module.css
@@ -23,5 +23,5 @@
 }
 
 .photo-slide {
-  @apply mx-auto relative bg-white border h-52 border-grey-100 lg:w-16 lg:h-16 lg:border-none;
+  @apply w-full mx-auto relative bg-white border h-52 border-grey-100 lg:w-16 lg:h-16 lg:border-none;
 }
